--- a/Yahoo.ipynb
+++ b/Yahoo.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Yahoo.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPRySmuyHcKwJgodd0G14KE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOSHlwpUmfl0WlunXznbgY2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +49,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 361
         },
-        "outputId": "e996e57a-fbe3-4f6c-b8e0-515b23bdb4c3"
+        "outputId": "a58a5e51-2575-4852-a20b-656711685a17"
       },
       "source": [
         "#data=pdr.get_data_yahoo(\"INFY\",start=\"2020-05-14\",end=\"2020-05-19\")\n",
@@ -69,9 +70,10 @@
         "cash=int(balance_trans.loc[:,\"Cash\"][0])/10000000\n",
         "print(cash)\n",
         "cashflow_trans=cashflow.T\n",
-        "cashflow_trans['A']= list(range(len(cashflow_trans.index)))"
+        "cashflow_trans['A']= list(range(len(cashflow_trans.index)))\n",
+        "cashflow_trans\n"
       ],
-      "execution_count": 121,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,6 +81,186 @@
             "9666.0\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Investments</th>\n",
+              "      <th>Change To Liabilities</th>\n",
+              "      <th>Total Cashflows From Investing Activities</th>\n",
+              "      <th>Net Borrowings</th>\n",
+              "      <th>Total Cash From Financing Activities</th>\n",
+              "      <th>Change To Operating Activities</th>\n",
+              "      <th>Net Income</th>\n",
+              "      <th>Change In Cash</th>\n",
+              "      <th>Effect Of Exchange Rate</th>\n",
+              "      <th>Total Cash From Operating Activities</th>\n",
+              "      <th>Depreciation</th>\n",
+              "      <th>Other Cashflows From Investing Activities</th>\n",
+              "      <th>Dividends Paid</th>\n",
+              "      <th>Change To Inventory</th>\n",
+              "      <th>Change To Account Receivables</th>\n",
+              "      <th>Other Cashflows From Financing Activities</th>\n",
+              "      <th>Change To Netincome</th>\n",
+              "      <th>Capital Expenditures</th>\n",
+              "      <th>Repurchase Of Stock</th>\n",
+              "      <th>A</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2020-03-31</th>\n",
+              "      <td>8.389000e+10</td>\n",
+              "      <td>8.210000e+09</td>\n",
+              "      <td>8.565000e+10</td>\n",
+              "      <td>-1.062000e+10</td>\n",
+              "      <td>-3.991500e+11</td>\n",
+              "      <td>-1.690000e+10</td>\n",
+              "      <td>3.234000e+11</td>\n",
+              "      <td>1.422000e+10</td>\n",
+              "      <td>4.030000e+09</td>\n",
+              "      <td>3.236900e+11</td>\n",
+              "      <td>3.529000e+10</td>\n",
+              "      <td>2.745000e+10</td>\n",
+              "      <td>-3.763400e+11</td>\n",
+              "      <td>50000000.0</td>\n",
+              "      <td>-3.803000e+10</td>\n",
+              "      <td>-1.219000e+10</td>\n",
+              "      <td>1.167000e+10</td>\n",
+              "      <td>-2.538000e+10</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2019-03-31</th>\n",
+              "      <td>4.024000e+10</td>\n",
+              "      <td>2.175000e+10</td>\n",
+              "      <td>1.596000e+10</td>\n",
+              "      <td>-1.940000e+09</td>\n",
+              "      <td>-2.789700e+11</td>\n",
+              "      <td>-2.763000e+10</td>\n",
+              "      <td>3.147200e+11</td>\n",
+              "      <td>2.341000e+10</td>\n",
+              "      <td>4.900000e+08</td>\n",
+              "      <td>2.859300e+11</td>\n",
+              "      <td>2.056000e+10</td>\n",
+              "      <td>-2.460000e+09</td>\n",
+              "      <td>-1.008500e+11</td>\n",
+              "      <td>160000000.0</td>\n",
+              "      <td>-1.597000e+10</td>\n",
+              "      <td>-1.618000e+10</td>\n",
+              "      <td>-2.766000e+10</td>\n",
+              "      <td>-2.053000e+10</td>\n",
+              "      <td>-1.600000e+11</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2018-03-31</th>\n",
+              "      <td>4.383000e+10</td>\n",
+              "      <td>7.580000e+09</td>\n",
+              "      <td>2.886000e+10</td>\n",
+              "      <td>-4.300000e+08</td>\n",
+              "      <td>-2.688500e+11</td>\n",
+              "      <td>2.312000e+10</td>\n",
+              "      <td>2.582600e+11</td>\n",
+              "      <td>1.286000e+10</td>\n",
+              "      <td>2.180000e+09</td>\n",
+              "      <td>2.506700e+11</td>\n",
+              "      <td>2.014000e+10</td>\n",
+              "      <td>3.070000e+09</td>\n",
+              "      <td>-9.284000e+10</td>\n",
+              "      <td>-50000000.0</td>\n",
+              "      <td>-3.274000e+10</td>\n",
+              "      <td>-1.558000e+10</td>\n",
+              "      <td>-2.564000e+10</td>\n",
+              "      <td>-1.862000e+10</td>\n",
+              "      <td>-1.600000e+11</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2017-03-31</th>\n",
+              "      <td>-1.858700e+11</td>\n",
+              "      <td>-1.210000e+09</td>\n",
+              "      <td>-1.673200e+11</td>\n",
+              "      <td>2.100000e+08</td>\n",
+              "      <td>-1.102600e+11</td>\n",
+              "      <td>3.490000e+09</td>\n",
+              "      <td>2.628900e+11</td>\n",
+              "      <td>-2.698000e+10</td>\n",
+              "      <td>-1.630000e+09</td>\n",
+              "      <td>2.522300e+11</td>\n",
+              "      <td>1.987000e+10</td>\n",
+              "      <td>3.808000e+10</td>\n",
+              "      <td>-9.162000e+10</td>\n",
+              "      <td>-50000000.0</td>\n",
+              "      <td>-8.590000e+09</td>\n",
+              "      <td>-1.885000e+10</td>\n",
+              "      <td>-2.422000e+10</td>\n",
+              "      <td>-1.989000e+10</td>\n",
+              "      <td>-1.600000e+11</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             Investments  Change To Liabilities  ...  Repurchase Of Stock  A\n",
+              "                                                 ...                        \n",
+              "2020-03-31  8.389000e+10           8.210000e+09  ...                  NaN  0\n",
+              "2019-03-31  4.024000e+10           2.175000e+10  ...        -1.600000e+11  1\n",
+              "2018-03-31  4.383000e+10           7.580000e+09  ...        -1.600000e+11  2\n",
+              "2017-03-31 -1.858700e+11          -1.210000e+09  ...        -1.600000e+11  3\n",
+              "\n",
+              "[4 rows x 20 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 124
         }
       ]
     }
