--- a/Technical1.ipynb
+++ b/Technical1.ipynb
@@ -6,7 +6,7 @@
       "name": "Technical1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNV82++IerrzLnoUUdMeerF",
+      "authorship_tag": "ABX9TyOdLnPREnlx8ZM+mJXvnJJO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,7 +61,16 @@
         "colab": {}
       },
       "source": [
-        "stock=[\"SBIN.NS\",\"INFY.NS\"]"
+        "stock1=[\"SBIN.NS\",\"HDFCBANK.NS\",\"HDFC.NS\",\"RBLBANK.NS\",\"BANDHANBNK.NS\",\"ICICIBANK.NS\",\"FEDERALBNK.NS\",\"INDUSINDBK.NS\",\"AXISBANK.NS\",\"PNB.NS\",\"KOTAKBANK.NS\",\"BANKBARODA.NS\"]\n",
+        "stock2=[\"JUBLFOOD.NS\",\"TATACONSUM.NS\",\"MARICO.NS\",\"PGHH.NS\",\"DABUR.NS\",\"MCDOWELL-N.NS\",\"BRITANNIA.NS\",\"COLPAL.NS\",\"NESTLEIND.NS\",\"UBL.NS\",\"GODREJCP.NS\",\"HINDUNILVR.NS\",\"GODREJIND.NS\",\"EMAMILTD.NS\",\"ITC.NS\"]\n",
+        "stock3=[\"GAIL.NS\",\"NTPC.NS\",\"POWERGRID.NS\",\"ONGC.NS\",\"RELIANCE.NS\",\"ADANITRANS.NS\",\"BPCL.NS\",\"IOC.NS\",\"TATAPOWER.NS\",\"HINDPETRO.NS\"]\n",
+        "stock4=[\"TATAMOTORS.NS\",\"M&M.NS\",\"TVSMOTOR.NS\",\"MOTHERSUMI.NS\",\"HEROMOTOCO.NS\",\"BAJAJ-AUTO.NS\",\"APOLLOTYRE.NS\",\"BHARATFORG.NS\",\"MRF.NS\",\"EICHERMOT.NS\",\"EXIDEIND.NS\",\"MARUTI.NS\",\"AMARAJABAT.NS\",\"BOSCHLTD.NS\",\"ASHOKLEY.NS\"]\n",
+        "stock5=[\"AUROPHARMA.NS\",\"GLENMARK.NS\",\"PEL.NS\",\"BIOCON.NS\",\"DIVISLAB.NS\",\"LUPIN.NS\",\"CADILAHC.NS\",\"SUNPHARMA.NS\",\"DRREDDY.NS\",\"CIPLA.NS\"]\n",
+        "stock6=[\"SOBHA.NS\",\"DLF.NS\",\"OBEROIRLTY.NS\",\"MAHLIFE.NS\",\"SUNTECK.NS\",\"BRIGADE.NS\",\"GODREJPROP.NS\",\"PHOENIXLTD.NS\",\"PRESTIGE.NS\",\"IBREALEST.NS\"]\n",
+        "stock7=[\"BALAJITELE.NS\",\"TV18BRDCST.NS\",\"NETWORK18.NS\",\"SUNTV.NS\",\"DISHTV.NS\",\"ZEEMEDIA.NS\",\"PVR.NS\",\"JUMPNET.NS\",\"ZEEL.NS\",\"INOXLEISUR.NS\",\"TVTODAY.NS\",\"DBCORP.NS\",\"JAGRAN.NS\",\"SAREGAMA.NS\"]\n",
+        "stock8=[\"HEXAWARE.NS\",\"TATAELXSI.NS\",\"WIPRO.NS\",\"JUSTDIAL.NS\",\"TCS.NS\",\"INFY.NS\",\"TECHM.NS\",\"HCLTECH.NS\",\"MINDTREE.NS\",\"NIITTECH.NS\"]\n",
+        "stock9=[\"VEDL.NS\",\"JSWSTEEL.NS\",\"HINDALCO.NS\",\"WELCORP.NS\",\"HINDCOPPER.NS\",\"APLAPOLLO.NS\",\"RATNAMANI.NS\",\"TATASTEEL.NS\",\"COALINDIA.NS\",\"HINDZINC.NS\",\"NMDC.NS\",\"SAIL.NS\",\"MOIL.NS\",\"NATIONALUM.NS\",\"JINDALSTEL.NS\"]\n",
+        "stock10=[\"M&MFIN.NS\",\"CHOLAFIN.NS\",\"ICICIPRULI.NS\",\"IBULHSGFIN.NS\",\"BAJFINANCE.NS\",\"SRTRANSFIN.NS\",\"HDFCLIFE.NS\",\"SBILIFE.NS\",\"RECLTD.NS\",\"BAJAJFINSV.NS\",\"BAJAJHLDNG.NS\",\"ICICIGI.NS\",\"PFC.NS\",\"EDELWEISS.NS\"]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -71,7 +80,11 @@
       "metadata": {
         "id": "AUT8TVYc8i5y",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 557
+        },
+        "outputId": "58c3b079-6be7-4c01-ca0e-a3a75fe06d89"
       },
       "source": [
         "def raw(x):\n",
@@ -134,8 +147,45 @@
         "    df= pd.DataFrame(data=d)\n",
         "    print(df)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "  JUBLFOOD.NS\n",
+            "0        None\n",
+            "  TATACONSUM.NS\n",
+            "0          None\n",
+            "  MARICO.NS\n",
+            "0      None\n",
+            "  PGHH.NS\n",
+            "0    None\n",
+            "  DABUR.NS\n",
+            "0     None\n",
+            "  MCDOWELL-N.NS\n",
+            "0          None\n",
+            "  BRITANNIA.NS\n",
+            "0         None\n",
+            "  COLPAL.NS\n",
+            "0      None\n",
+            "  NESTLEIND.NS\n",
+            "0         None\n",
+            "  UBL.NS\n",
+            "0   None\n",
+            "  GODREJCP.NS\n",
+            "0        None\n",
+            "  HINDUNILVR.NS\n",
+            "0          None\n",
+            "  GODREJIND.NS\n",
+            "0         None\n",
+            "  EMAMILTD.NS\n",
+            "0        None\n",
+            "  ITC.NS\n",
+            "0   None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
