--- a/Yahoo.ipynb
+++ b/Yahoo.ipynb
@@ -6,7 +6,7 @@
       "name": "Yahoo.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSHlwpUmfl0WlunXznbgY2",
+      "authorship_tag": "ABX9TyOdD6t9ptJcbCXbFo0yrc/R",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,11 +47,11 @@
       "metadata": {
         "id": "7q_4UCr_ijeh",
         "colab_type": "code",
+        "outputId": "6702552d-492e-446a-bba8-9006902ca174",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 361
-        },
-        "outputId": "a58a5e51-2575-4852-a20b-656711685a17"
+          "height": 557
+        }
       },
       "source": [
         "#data=pdr.get_data_yahoo(\"INFY\",start=\"2020-05-14\",end=\"2020-05-19\")\n",
@@ -60,207 +60,77 @@
         "msft=yf.Ticker(\"TCS.NS\")\n",
         "balance=msft.get_balance_sheet(proxy=\"PROXY_SERVER\")\n",
         "cashflow=msft.get_cashflow(proxy=\"PROXY_SERVER\")\n",
-        "earnings=msft.get_financials(proxy=\"PROXY_SERVER\")\n",
+        "financials=msft.get_financials(proxy=\"PROXY_SERVER\")\n",
+        "earnings=msft.get_earnings(proxy=\"PROXY_SERVER\")\n",
         "holders=msft.get_institutional_holders(proxy=\"PROXY_SERVER\")\n",
+        "beta=1\n",
+        "market_RoR = .15\n",
+        "risk_free = .064\n",
+        "f5 = .14\n",
+        "s5 = .09\n",
+        "tg = .04\n",
         "#option_chain=msft.get_option_chain(proxy=\"PROXY_SERVER\")\n",
         "balance_trans = balance.T\n",
         "#df = pd.DataFrame(data=x)\n",
         "#print(df)\n",
         "balance_trans['A'] = list(range(len(balance_trans.index)))\n",
         "cash=int(balance_trans.loc[:,\"Cash\"][0])/10000000\n",
-        "print(cash)\n",
         "cashflow_trans=cashflow.T\n",
         "cashflow_trans['A']= list(range(len(cashflow_trans.index)))\n",
-        "cashflow_trans\n"
+        "cashflow_trans\n",
+        "capex=cashflow_trans.loc[:,\"Capital Expenditures\"]/10000000\n",
+        "brw     =  int(balance_trans.loc[:,\"Deferred Long Term Liab\"][0])+int(balance_trans.loc[:,\"Other Current Liab\"][0])\n",
+        "brw     =   brw/10000000\n",
+        "br=int(balance_trans.loc[:,\"Retained Earnings\"][0])\n",
+        "br=br/10000000\n",
+        "financials_trans     = financials.T\n",
+        "financials_trans['A']= list(range(len(financials_trans.index)))\n",
+        "interest        =   int(financials_trans.loc[:,\"Interest Expense\"][0])\n",
+        "interest        =   interest/10000000\n",
+        "total_liab      =   int(balance_trans.loc[:,\"Total Liab\"][0])/10000000\n",
+        "print(balance)\n",
+        "stock_eq        =   int(balance_trans.loc[:,\"Total Stockholder Equity\"][0])/10000000\n",
+        "def_lia         =   int(balance_trans.loc[:,\"Deferred Long Term Liab\"][0])/10000000\n",
+        "ta              =   int(balance_trans.loc[:,\"Total Assets\"][0])/10000000\n",
+        "common          =   "
       ],
-      "execution_count": 124,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "9666.0\n"
+            "                                    2020-03-31  ...    2017-03-31\n",
+            "Intangible Assets                 2.830000e+09  ...  4.700000e+08\n",
+            "Total Liab                        3.615000e+11  ...  1.667200e+11\n",
+            "Total Stockholder Equity          8.412600e+11  ...  8.621400e+11\n",
+            "Minority Interest                 6.230000e+09  ...  3.660000e+09\n",
+            "Deferred Long Term Liab           2.860000e+09  ...           NaN\n",
+            "Other Current Liab                9.520000e+10  ...  4.778000e+10\n",
+            "Total Assets                      1.208990e+12  ...  1.032520e+12\n",
+            "Common Stock                      3.750000e+09  ...  1.970000e+09\n",
+            "Other Current Assets              1.837000e+10  ...  1.620000e+10\n",
+            "Retained Earnings                 8.080600e+11  ...  8.193500e+11\n",
+            "Other Liab                        2.184000e+10  ...  2.089000e+10\n",
+            "Good Will                         1.710000e+10  ...  1.597000e+10\n",
+            "Treasury Stock                    2.945000e+10  ...  2.163000e+10\n",
+            "Other Assets                      8.427000e+10  ...  9.490000e+10\n",
+            "Cash                              8.646000e+10  ...  3.597000e+10\n",
+            "Total Current Liabilities         2.706000e+11  ...  1.451200e+11\n",
+            "Deferred Long Term Asset Charges  2.828000e+10  ...  2.828000e+10\n",
+            "Other Stockholder Equity          2.945000e+10  ...  2.163000e+10\n",
+            "Property Plant Equipment          1.984100e+11  ...  1.159800e+11\n",
+            "Total Current Assets              9.023700e+11  ...  8.031600e+11\n",
+            "Long Term Investments             4.010000e+09  ...  2.040000e+09\n",
+            "Net Tangible Assets               8.213300e+11  ...  8.457000e+11\n",
+            "Short Term Investments            9.650000e+09  ...  4.700000e+09\n",
+            "Net Receivables                   5.115700e+11  ...  3.196300e+11\n",
+            "Inventory                         5.000000e+07  ...  2.100000e+08\n",
+            "Accounts Payable                  6.740000e+10  ...  4.905000e+10\n",
+            "Capital Surplus                            NaN  ...  1.919000e+10\n",
+            "\n",
+            "[27 rows x 4 columns]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Investments</th>\n",
-              "      <th>Change To Liabilities</th>\n",
-              "      <th>Total Cashflows From Investing Activities</th>\n",
-              "      <th>Net Borrowings</th>\n",
-              "      <th>Total Cash From Financing Activities</th>\n",
-              "      <th>Change To Operating Activities</th>\n",
-              "      <th>Net Income</th>\n",
-              "      <th>Change In Cash</th>\n",
-              "      <th>Effect Of Exchange Rate</th>\n",
-              "      <th>Total Cash From Operating Activities</th>\n",
-              "      <th>Depreciation</th>\n",
-              "      <th>Other Cashflows From Investing Activities</th>\n",
-              "      <th>Dividends Paid</th>\n",
-              "      <th>Change To Inventory</th>\n",
-              "      <th>Change To Account Receivables</th>\n",
-              "      <th>Other Cashflows From Financing Activities</th>\n",
-              "      <th>Change To Netincome</th>\n",
-              "      <th>Capital Expenditures</th>\n",
-              "      <th>Repurchase Of Stock</th>\n",
-              "      <th>A</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2020-03-31</th>\n",
-              "      <td>8.389000e+10</td>\n",
-              "      <td>8.210000e+09</td>\n",
-              "      <td>8.565000e+10</td>\n",
-              "      <td>-1.062000e+10</td>\n",
-              "      <td>-3.991500e+11</td>\n",
-              "      <td>-1.690000e+10</td>\n",
-              "      <td>3.234000e+11</td>\n",
-              "      <td>1.422000e+10</td>\n",
-              "      <td>4.030000e+09</td>\n",
-              "      <td>3.236900e+11</td>\n",
-              "      <td>3.529000e+10</td>\n",
-              "      <td>2.745000e+10</td>\n",
-              "      <td>-3.763400e+11</td>\n",
-              "      <td>50000000.0</td>\n",
-              "      <td>-3.803000e+10</td>\n",
-              "      <td>-1.219000e+10</td>\n",
-              "      <td>1.167000e+10</td>\n",
-              "      <td>-2.538000e+10</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2019-03-31</th>\n",
-              "      <td>4.024000e+10</td>\n",
-              "      <td>2.175000e+10</td>\n",
-              "      <td>1.596000e+10</td>\n",
-              "      <td>-1.940000e+09</td>\n",
-              "      <td>-2.789700e+11</td>\n",
-              "      <td>-2.763000e+10</td>\n",
-              "      <td>3.147200e+11</td>\n",
-              "      <td>2.341000e+10</td>\n",
-              "      <td>4.900000e+08</td>\n",
-              "      <td>2.859300e+11</td>\n",
-              "      <td>2.056000e+10</td>\n",
-              "      <td>-2.460000e+09</td>\n",
-              "      <td>-1.008500e+11</td>\n",
-              "      <td>160000000.0</td>\n",
-              "      <td>-1.597000e+10</td>\n",
-              "      <td>-1.618000e+10</td>\n",
-              "      <td>-2.766000e+10</td>\n",
-              "      <td>-2.053000e+10</td>\n",
-              "      <td>-1.600000e+11</td>\n",
-              "      <td>1</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2018-03-31</th>\n",
-              "      <td>4.383000e+10</td>\n",
-              "      <td>7.580000e+09</td>\n",
-              "      <td>2.886000e+10</td>\n",
-              "      <td>-4.300000e+08</td>\n",
-              "      <td>-2.688500e+11</td>\n",
-              "      <td>2.312000e+10</td>\n",
-              "      <td>2.582600e+11</td>\n",
-              "      <td>1.286000e+10</td>\n",
-              "      <td>2.180000e+09</td>\n",
-              "      <td>2.506700e+11</td>\n",
-              "      <td>2.014000e+10</td>\n",
-              "      <td>3.070000e+09</td>\n",
-              "      <td>-9.284000e+10</td>\n",
-              "      <td>-50000000.0</td>\n",
-              "      <td>-3.274000e+10</td>\n",
-              "      <td>-1.558000e+10</td>\n",
-              "      <td>-2.564000e+10</td>\n",
-              "      <td>-1.862000e+10</td>\n",
-              "      <td>-1.600000e+11</td>\n",
-              "      <td>2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2017-03-31</th>\n",
-              "      <td>-1.858700e+11</td>\n",
-              "      <td>-1.210000e+09</td>\n",
-              "      <td>-1.673200e+11</td>\n",
-              "      <td>2.100000e+08</td>\n",
-              "      <td>-1.102600e+11</td>\n",
-              "      <td>3.490000e+09</td>\n",
-              "      <td>2.628900e+11</td>\n",
-              "      <td>-2.698000e+10</td>\n",
-              "      <td>-1.630000e+09</td>\n",
-              "      <td>2.522300e+11</td>\n",
-              "      <td>1.987000e+10</td>\n",
-              "      <td>3.808000e+10</td>\n",
-              "      <td>-9.162000e+10</td>\n",
-              "      <td>-50000000.0</td>\n",
-              "      <td>-8.590000e+09</td>\n",
-              "      <td>-1.885000e+10</td>\n",
-              "      <td>-2.422000e+10</td>\n",
-              "      <td>-1.989000e+10</td>\n",
-              "      <td>-1.600000e+11</td>\n",
-              "      <td>3</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "             Investments  Change To Liabilities  ...  Repurchase Of Stock  A\n",
-              "                                                 ...                        \n",
-              "2020-03-31  8.389000e+10           8.210000e+09  ...                  NaN  0\n",
-              "2019-03-31  4.024000e+10           2.175000e+10  ...        -1.600000e+11  1\n",
-              "2018-03-31  4.383000e+10           7.580000e+09  ...        -1.600000e+11  2\n",
-              "2017-03-31 -1.858700e+11          -1.210000e+09  ...        -1.600000e+11  3\n",
-              "\n",
-              "[4 rows x 20 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 124
         }
       ]
     }
