--- a/DCF.ipynb
+++ b/DCF.ipynb
@@ -51,8 +51,8 @@
         "colab": {}
       },
       "source": [
-        "symbol = \"NCC\"\n",
-        "beta=1.43"
+        "symbol = \"BHARTIARTL\"\n",
+        "beta=.80"
       ],
       "execution_count": 0,
       "outputs": []
@@ -81,7 +81,11 @@
       "metadata": {
         "id": "c82m4hAiCHk_",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "acd7c0f2-e5dd-48db-d7bd-54d3e9725245"
       },
       "source": [
         "# capex\n",
@@ -113,17 +117,41 @@
         "j = req2.json()\n",
         "import numpy as np\n",
         "df2 = pd.DataFrame.from_dict(j)\n",
-        "capex=df2[\"Fixed Assets Purchased\"]+df2[\"Fixed Assets Sold\"]"
+        "df2\n",
+        "#df2[\"Fixed assets purchased\"]\n",
+        "capex=df2[\"Fixed assets purchased\"]+df2[\"Fixed assets sold\"]\n",
+        "capex16=int(capex[\"Mar 2016\"].replace(',', ''))/1000\n",
+        "capex17=int(capex[\"Mar 2017\"].replace(',', ''))/1000\n",
+        "capex18=int(capex[\"Mar 2018\"].replace(',', ''))/1000\n",
+        "capex19=int(capex[\"Mar 2019\"].replace(',', ''))/1000\n",
+        "capex19"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-29478.428"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 90
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "z_feQk3_A-U7",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "db07a607-c393-4d6e-ae60-466515d385bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
       },
       "source": [
         "# cash \n",
@@ -132,17 +160,44 @@
         "cashjson=req4.json()\n",
         "cashdf= pd.DataFrame.from_dict(cashjson)\n",
         "c=cashdf['Cash Equivalents']\n",
-        "cash=c[month]"
+        "cash=c[month]\n",
+        "cash=int(cash.replace(',', ''))\n",
+        "print(cash)\n",
+        "type(cash)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "220\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "i8B_ILEUyDxm",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "0aefd61b-289f-4bb5-baa6-978e20f99fcb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "r1 = requests.get(url1).content\n",
@@ -154,10 +209,23 @@
         "tab3 = table1[7]\n",
         "tab4 = table2[3]\n",
         "s = int(tab4.loc[21:21,\"Total Number of Shares\"])\n",
-        "#s="
+        "type(s)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 80
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -184,7 +252,7 @@
       "metadata": {
         "id": "BxlC4Jy7z111",
         "colab_type": "code",
-        "outputId": "47a99687-5e4f-4694-f58a-2ece459c2126",
+        "outputId": "bb2a2fc9-c1ac-4912-f39f-2a7e4f9d691d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -208,14 +276,14 @@
         "print(Rd)\n",
         "print(dis)"
       ],
-      "execution_count": 0,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.18697999999999998\n",
-            "0.1939799331103679\n",
-            "0.16807206972275596\n"
+            "0.1328\n",
+            "0.08780336129093982\n",
+            "0.08735832529227144\n"
           ],
           "name": "stdout"
         }
@@ -254,10 +322,10 @@
         "colab": {}
       },
       "source": [
-        "fcf16 = co16+capex['Mar 2016']+Int16-shield16\n",
-        "fcf17 = co17+capex['Mar 2017']+Int17-shield17\n",
-        "fcf18 = co18+capex['Mar 2018']+Int18-shield18\n",
-        "fcf19 = co19+capex['Mar 2019']+Int19-shield19\n",
+        "fcf16 = co16+capex16+Int16-shield16\n",
+        "fcf17 = co17+capex17+Int17-shield17\n",
+        "fcf18 = co18+capex18+Int18-shield18\n",
+        "fcf19 = co19+capex19+Int19-shield19\n",
         "FCF = (fcf16+fcf17+fcf18+fcf19)/4"
       ],
       "execution_count": 0,
@@ -296,7 +364,11 @@
       "metadata": {
         "id": "fiYsPIgVnFA1",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "c33e1e2b-17aa-4f79-d9aa-1d4bdd1528d1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
       "source": [
         "#present value of 10yrs\n",
@@ -311,10 +383,24 @@
         "p9 = nine/(1+dis)**9\n",
         "p10 = ten/(1+dis)**10\n",
         "pt = t/(1+dis)**10\n",
-        "PV = p1+p2+p3+p4+p5+p6+p7+p8+p9+p10+pt"
+        "PV = p1+p2+p3+p4+p5+p6+p7+p8+p9+p10+pt\n",
+        "type(cash)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 86
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -335,40 +421,25 @@
       "metadata": {
         "id": "GKTuV1300iba",
         "colab_type": "code",
-        "outputId": "c2264d05-1d33-4c84-b05c-3904aee3f188",
+        "outputId": "823bc33f-4252-4507-de22-ced2d960204c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 53
+          "height": 35
         }
       },
       "source": [
         "numerator=PV-net_debt\n",
-        "\n",
         "share_price=(numerator*10000000)/s\n",
-        "print(share_price)\n",
-        "s\n",
-        "numerator"
+        "print(share_price)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "114.36238656357015\n"
+            "-14374.372686117573\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6869.137728494546"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
         }
       ]
     }
