--- a/Live_pairtrade.ipynb
+++ b/Live_pairtrade.ipynb
@@ -6,7 +6,7 @@
       "name": "Live_pairtrade.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMBe/hVEO4t/xLhiS7YaryX",
+      "authorship_tag": "ABX9TyOYv3qA31c7NzGHrFoEgyMd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,11 @@
       "metadata": {
         "id": "qGXCEt3p1JBu",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "cef5c0b7-69b5-4dba-f5b6-e72efd52f381",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 253
+        }
       },
       "source": [
         "import pandas as pd  \n",
@@ -53,29 +57,45 @@
         "from matplotlib import pyplot as plt\n",
         "import yfinance as yf"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: yfinance in /usr/local/lib/python3.6/dist-packages (0.1.54)\n",
+            "Requirement already satisfied: requests>=2.20 in /usr/local/lib/python3.6/dist-packages (from yfinance) (2.23.0)\n",
+            "Requirement already satisfied: pandas>=0.24 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.0.3)\n",
+            "Requirement already satisfied: numpy>=1.15 in /usr/local/lib/python3.6/dist-packages (from yfinance) (1.18.4)\n",
+            "Requirement already satisfied: multitasking>=0.0.7 in /usr/local/lib/python3.6/dist-packages (from yfinance) (0.0.9)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2020.4.5.1)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (2.9)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (1.24.3)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests>=2.20->yfinance) (3.0.4)\n",
+            "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2018.9)\n",
+            "Requirement already satisfied: python-dateutil>=2.6.1 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.24->yfinance) (2.8.1)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.6/dist-packages (from python-dateutil>=2.6.1->pandas>=0.24->yfinance) (1.12.0)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "oP2Fw0Ef1fkH",
         "colab_type": "code",
-        "outputId": "22068ccd-2550-48f0-8919-3c20eb4b2876",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 251
-        }
+        "colab": {}
       },
       "source": [
         "symbol1=[\"ICICIGI.NS\",\"NATIONALUM.NS\",\"HCLTECH.NS\",\"APOLLOTYRE.NS\",\"^NSEI\"]\n",
-        "symbol2=[\"ICICIPRULI.NS\",\"VEDL.NS\",\"TECHM.NS\",\"M&M.NS\",\"HDFCBANK.NS\"]\n",
+        "symbol2=[\"ICICIPRULI.NS\",\"VEDL.NS\",\"TECHM.NS\",\"M&M.NS\",\"HDFCBANK.NS\",\"ICICIBANK.NS\"]\n",
         "global df \n",
         "df = pd.DataFrame([])\n",
         "print(df)\n",
         "def line(p,q):\n",
         "    if p == q:\n",
-        "        print(\"Check Values\")\n",
+        "        pass\n",
+        "        #print(\"Check Values\")\n",
         "    else:\n",
         "        stock1 = yf.Ticker(p)    \n",
         "        stock2 = yf.Ticker(q)    \n",
@@ -83,6 +103,7 @@
         "        hist2 = stock2.history(period=\"246d\")\n",
         "        data1=hist1[\"Close\"]\n",
         "        data2=hist2[\"Close\"]\n",
+        "        LTP=data1[-1]\n",
         "        x=data1.values.reshape(-1,1)\n",
         "        y=data2.values.reshape(-1,1)\n",
         "        reg1=LinearRegression().fit(x,y)# linear regression\n",
@@ -136,39 +157,49 @@
         "                return(inter)\n",
         "        inter_f=inter(er_ratio1,er_ratio2)\n",
         "        inter=int(inter_f)\n",
+        "        def LTP(x,y):\n",
+        "            if (x<y):\n",
+        "                LTP=data2[-1]\n",
+        "                return(LTP)\n",
+        "            if (x>y):\n",
+        "                LTP=data1[-1]\n",
+        "                return(LTP)\n",
+        "        LTP =   LTP(er_ratio1,er_ratio2)\n",
+        "        if (inter>.30*LTP):\n",
+        "            pass\n",
+        "            #print(\"High Intercept:\",p,'/',q)\n",
+        "        else:\n",
         "        #if (er_ratio1<er_ratio2):\n",
-        "            #return res1 as r\n",
+        "        #return res1 as r\n",
         "        #elif():\n",
         "            #return res2 as r\n",
         "        #sd_intercept = see * sqrt(1./len(x) + mx*mx/sx2)\n",
         "        #sd_slope = see * sqrt(1./sx2)\n",
         "        #see??= std_error\n",
         "        #type(residuals2)\n",
-        "        sigma=stdev(r)\n",
-        "        si=round(sigma,3)\n",
-        "        std_err=r[244]/sigma\n",
-        "        st_er=round(std_err,3)\n",
+        "            sigma=stdev(r)\n",
+        "            si=round(sigma,3)\n",
+        "            std_err=r[244]/sigma\n",
+        "            st_er=round(std_err,3)\n",
         "        #print(std_err)\n",
         "        #res1.hist()\n",
         "        #plt.show()\n",
-        "        p_value = r.values\n",
-        "        result = adfuller(p_value)\n",
+        "            p_value = r.values\n",
+        "            result = adfuller(p_value)\n",
         "        #print('ADF Statistic: %f' % result[0])\n",
         "        #print('p-value: %f' % result[1])\n",
         "        #print('Critical Values:')\n",
         "        #for key, value in result[4].items():\n",
         "            #print('\\t%s: %.3f' % (key, value))\n",
-        "        result[1]\n",
-        "        pv= round(result[1],3)\n",
-        "        sheet=[[q,p,pv,st_er,si,er1,er2,inter]]\n",
-        "        rdf = pd.DataFrame(sheet, columns = ['ystock','xstock','pvalue','std_err','sigma','er1','er2','inter'])\n",
-        "        global df\n",
-        "        df=df.append(rdf)\n",
-        "        #print(df)\n",
+        "            result[1]\n",
+        "            pv= round(result[1],3)\n",
+        "            sheet=[[q,p,pv,st_er,si,er1,er2,inter]]\n",
+        "            rdf = pd.DataFrame(sheet, columns = ['ystock','xstock','pvalue','std_err','sigma','er1','er2','inter'])\n",
+        "            global df\n",
+        "            df=df.append(rdf)\n",
         "for a in symbol1:\n",
         "  for b in symbol2:\n",
         "     asdf=line(a,b)\n",
-        "     #asdf\n",
         "#print(df.drop_duplicates(['sigma','std_err','pvalue']))\n",
         "pdata=df.drop_duplicates(['sigma','std_err','pvalue'])\n",
         "#for x, y in [(x,y) for x in symbol1 for y in symbol2]:\n",
@@ -181,28 +212,8 @@
         "#print(s)\n",
         "print(mx1)"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Empty DataFrame\n",
-            "Columns: []\n",
-            "Index: []\n",
-            "          ystock         xstock  pvalue  std_err    sigma    er1    er2  inter\n",
-            "0  ICICIPRULI.NS     ICICIGI.NS   0.006    2.545   56.008  0.696  0.451    539\n",
-            "0        VEDL.NS  NATIONALUM.NS   0.009   -2.351    1.769  0.440  0.292     14\n",
-            "0         M&M.NS  NATIONALUM.NS   0.045   -2.888    2.347  0.440  0.358     10\n",
-            "0    HDFCBANK.NS  NATIONALUM.NS   0.047   -0.637   71.304  0.440  0.549    369\n",
-            "0  ICICIPRULI.NS     HCLTECH.NS   0.006    1.781   24.921  0.805  0.451    294\n",
-            "0       TECHM.NS     HCLTECH.NS   0.002    2.544   22.388  0.805  0.497    255\n",
-            "0    HDFCBANK.NS     HCLTECH.NS   0.014    2.267   28.293  0.805  0.549    263\n",
-            "0         M&M.NS  APOLLOTYRE.NS   0.024    2.413   29.156  0.300  0.358    108\n",
-            "0    HDFCBANK.NS          ^NSEI   0.019    1.694  235.186  0.614  0.549   1388\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
